WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273813
BlobStreamSource does not need to enqueue aggressively received buffers
https://bugs.webkit.org/show_bug.cgi?id=273813
Summary
BlobStreamSource does not need to enqueue aggressively received buffers
youenn fablet
Reported
2024-05-07 01:26:39 PDT
BlobStreamSource does not seem to enqueue aggressively received buffers
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-07 01:26:54 PDT
<
rdar://problem/127653288
>
youenn fablet
Comment 2
2024-05-07 02:02:58 PDT
PR split from
https://bugs.webkit.org/show_bug.cgi?id=272600
PR
EWS
Comment 3
2024-05-13 09:43:15 PDT
Committed
278693@main
(7bfec45dfb8b): <
https://commits.webkit.org/278693@main
> Reviewed commits have been landed. Closing PR #28223 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug